refactor: cleanup files structures

--- a/sagittarius_a/styling/global.css
+++ b/sagittarius_a/styling/global.css
@@ -14,9 +14,11 @@ body {
 @keyframes gravity-pull {
     0% {
         transform: scale(1.0) translateY(0px);
+        opacity: 1;
     }
     100% {
         transform: scale(0.90) translateY(0px);
+        opacity: .4;
     }
 }
 
